hphp/test/slow/hashbang.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/slow/hashbang.php on line 1